Convert Quick Actions and Wellness Tools items into clickable links

--- a/dashboard.html
+++ b/dashboard.html
@@ -113,10 +113,10 @@
                             <div class="mega-menu-section initial-items">
                                 <h4>Health & Wellness</h4>
                                 <ul class="mega-menu-links">
+                                    <li><a href="food_recipes.html">Food & Recipes</a></li>
                                     <li><a href="wellness.html">Aging Well</a></li>
                                     <li><a href="food_recipes.html">Diet & Weight Management</a></li>
                                     <li><a href="wellness.html">Fitness & Exercise</a></li>
-                                    <li><a href="food_recipes.html">Food & Recipes</a></li>
                                     <li><a href="wellness.html">Health & Balance</a></li>
                                 </ul>
                             </div>
@@ -237,7 +237,7 @@
                 <div class="action-group">
                     <h3><i class="fas fa-rocket"></i> Quick Actions</h3>
                     <div class="action-list">
-                        <div class="action-item" id="startChatAction">
+                        <a href="dashboard.html" class="action-item" id="startChatAction">
                             <div class="action-info">
                                 <div class="action-icon" style="background: #3b82f6;">
                                     <i class="fas fa-comment-medical"></i>
@@ -248,8 +248,9 @@
                                 </div>
                             </div>
                             <i class="fas fa-chevron-right" style="color: #9ca3af;"></i>
-                        </div>
-                        <div class="action-item" id="symptomCheckerAction">
+                        </a>
+
+                        <a href="Symptom_Checker.html" class="action-item" id="symptomCheckerAction">
                             <div class="action-info">
                                 <div class="action-icon" style="background: #10b981;">
                                     <i class="fas fa-search"></i>
@@ -260,8 +261,9 @@
                                 </div>
                             </div>
                             <i class="fas fa-chevron-right" style="color: #9ca3af;"></i>
-                        </div>
-                        <div class="action-item" id="findDoctorAction">
+                        </a>
+
+                        <a href="Doctor.html" class="action-item" id="findDoctorAction">
                             <div class="action-info">
                                 <div class="action-icon" style="background: #8b5cf6;">
                                     <i class="fas fa-user-md"></i>
@@ -272,14 +274,14 @@
                                 </div>
                             </div>
                             <i class="fas fa-chevron-right" style="color: #9ca3af;"></i>
-                        </div>
+                        </a>
                     </div>
                 </div>
 
                 <div class="action-group">
                     <h3><i class="fas fa-heart"></i> Wellness Tools</h3>
                     <div class="action-list">
-                        <div class="action-item" id="wellnessAction">
+                        <a href="wellness.html" class="action-item" id="wellnessAction">
                             <div class="action-info">
                                 <div class="action-icon" style="background: #f59e0b;">
                                     <i class="fas fa-spa"></i>
@@ -290,8 +292,9 @@
                                 </div>
                             </div>
                             <i class="fas fa-chevron-right" style="color: #9ca3af;"></i>
-                        </div>
-                        <div class="action-item" id="recipesAction">
+                        </a>
+
+                        <a href="food_recipes.html" class="action-item" id="recipesAction">
                             <div class="action-info">
                                 <div class="action-icon" style="background: #ef4444;">
                                     <i class="fas fa-utensils"></i>
@@ -302,8 +305,9 @@
                                 </div>
                             </div>
                             <i class="fas fa-chevron-right" style="color: #9ca3af;"></i>
-                        </div>
-                        <div class="action-item" id="drugsAction">
+                        </a>
+
+                        <a href="Drugs_supl.html" class="action-item" id="drugsAction">
                             <div class="action-info">
                                 <div class="action-icon" style="background: #06b6d4;">
                                     <i class="fas fa-pills"></i>
@@ -314,67 +318,69 @@
                                 </div>
                             </div>
                             <i class="fas fa-chevron-right" style="color: #9ca3af;"></i>
-                        </div>
+                        </a>
                     </div>
                 </div>
             </div>
 
-            <!-- Health Summary -->
-            <div class="health-summary">
-                <h3><i class="fas fa-chart-line"></i> Health Summary</h3>
-                <div class="health-metrics">
-                    <div class="metric">
-                        <div class="metric-value">120/80</div>
-                        <div class="metric-label">Blood Pressure</div>
-                    </div>
-                    <div class="metric">
-                        <div class="metric-value">72 bpm</div>
-                        <div class="metric-label">Heart Rate</div>
-                    </div>
-                    <div class="metric">
-                        <div class="metric-value">98.6°F</div>
-                        <div class="metric-label">Temperature</div>
-                    </div>
-                    <div class="metric">
-                        <div class="metric-value">BMI 22.5</div>
-                        <div class="metric-label">Body Mass Index</div>
-                    </div>
-                </div>
-            </div>
+        </div>
 
-            <!-- Recent Activities -->
-            <div class="recent-activities">
-                <h3><i class="fas fa-history"></i> Recent Activity</h3>
-                <div id="recentActivity">
-                    <div class="activity-item">
-                        <div class="activity-icon" style="background: #3b82f6;">
-                            <i class="fas fa-notes-medical"></i>
-                        </div>
-                        <div class="activity-content">
-                            <div class="activity-title">Viewed Diabetes Information</div>
-                            <div class="activity-time">2 hours ago</div>
-                        </div>
+        <!-- Health Summary -->
+        <div class="health-summary">
+            <h3><i class="fas fa-chart-line"></i> Health Summary</h3>
+            <div class="health-metrics">
+                <div class="metric">
+                    <div class="metric-value">120/80</div>
+                    <div class="metric-label">Blood Pressure</div>
+                </div>
+                <div class="metric">
+                    <div class="metric-value">72 bpm</div>
+                    <div class="metric-label">Heart Rate</div>
+                </div>
+                <div class="metric">
+                    <div class="metric-value">98.6°F</div>
+                    <div class="metric-label">Temperature</div>
+                </div>
+                <div class="metric">
+                    <div class="metric-value">BMI 22.5</div>
+                    <div class="metric-label">Body Mass Index</div>
+                </div>
+            </div>
+        </div>
+
+        <!-- Recent Activities -->
+        <div class="recent-activities">
+            <h3><i class="fas fa-history"></i> Recent Activity</h3>
+            <div id="recentActivity">
+                <div class="activity-item">
+                    <div class="activity-icon" style="background: #3b82f6;">
+                        <i class="fas fa-notes-medical"></i>
                     </div>
-                    <div class="activity-item">
-                        <div class="activity-icon" style="background: #10b981;">
-                            <i class="fas fa-search"></i>
-                        </div>
-                        <div class="activity-content">
-                            <div class="activity-title">Used Symptom Checker</div>
-                            <div class="activity-time">1 day ago</div>
-                        </div>
+                    <div class="activity-content">
+                        <div class="activity-title">Viewed Diabetes Information</div>
+                        <div class="activity-time">2 hours ago</div>
                     </div>
-                    <div class="activity-item">
-                        <div class="activity-icon" style="background: #8b5cf6;">
-                            <i class="fas fa-user-md"></i>
-                        </div>
-                        <div class="activity-content">
-                            <div class="activity-title">Searched for Cardiologist</div>
-                            <div class="activity-time">3 days ago</div>
-                        </div>
+                </div>
+                <div class="activity-item">
+                    <div class="activity-icon" style="background: #10b981;">
+                        <i class="fas fa-search"></i>
+                    </div>
+                    <div class="activity-content">
+                        <div class="activity-title">Used Symptom Checker</div>
+                        <div class="activity-time">1 day ago</div>
+                    </div>
+                </div>
+                <div class="activity-item">
+                    <div class="activity-icon" style="background: #8b5cf6;">
+                        <i class="fas fa-user-md"></i>
+                    </div>
+                    <div class="activity-content">
+                        <div class="activity-title">Searched for Cardiologist</div>
+                        <div class="activity-time">3 days ago</div>
                     </div>
                 </div>
             </div>
+        </div>
         </div>
     </main>
     <!-- Footer Section-->
