updated the nav links

--- a/dashboard.html
+++ b/dashboard.html
@@ -45,10 +45,10 @@
                                 <ul class="mega-menu-links">
                                     <li><a href="Info Resources/malaria.html">Malaria</a></li>
                                     <li><a href="Info Resources/typhoid.html">Typhoid</a></li>
-                                    <li><a href="Info Resources/tb.html">Tuberculosis (TB)</a></li>
-                                    <li><a href="Info Resources/hiv.html">HIV & AIDS</a></li>
+                                    <li><a href="Info Resources/tuberculosis.html">Tuberculosis (TB)</a></li>
+                                    <li><a href="Info Resources/hiv_aids.html">HIV & AIDS</a></li>
                                     <li><a href="Info Resources/pneumonia.html">Pneumonia</a></li>
-                                    <li><a href="Info Resources/diarrhea.html">Diarrheal Diseases</a></li>
+                                    <li><a href="Info Resources/diarrhea.html">Diarrhea</a></li>
                                 </ul>
                             </div>
 
@@ -61,7 +61,7 @@
                                     <li><a href="Info Resources/cancer.html">Cancer</a></li>
                                     <li><a href="Info Resources/asthma.html">Asthma</a></li>
                                     <li><a href="Info Resources/heart_disease.html">Heart Disease</a></li>
-                                    <li><a href="Info Resources/chronic_kidney_disease.html">Chronic Kidney Disease</a>
+                                    <li><a href="Info Resources/chronic-kidney-disease.html">Chronic Kidney Disease</a>
                                     </li>
                                 </ul>
                             </div>
@@ -69,12 +69,15 @@
                             <div class="mega-menu-section initial-items">
                                 <h4>Maternal & Child Health</h4>
                                 <ul class="mega-menu-links">
-                                    <li><a href="#">Pregnancy & Antenatal Care</a></li>
-                                    <li><a href="#">Safe Delivery</a></li>
-                                    <li><a href="#">Postpartum Health</a></li>
-                                    <li><a href="#">Child Nutrition</a></li>
-                                    <li><a href="#">Vaccination & Immunization</a></li>
-                                    <li><a href="#">Common Childhood Illnesses</a></li>
+                                    <li><a href="Info Resources/pregnancy-antenatal-care.html">Pregnancy & Antenatal
+                                            Care</a></li>
+                                    <li><a href="Info Resources/safe-delivery.html">Safe Delivery</a></li>
+                                    <li><a href="Info Resources/postpartum-health.html">Postpartum Health</a></li>
+                                    <li><a href="Info Resources/child-nutrition.html">Child Nutrition</a></li>
+                                    <li><a href="Info Resources/vaccination-immunization.html">Vaccination &
+                                            Immunization</a></li>
+                                    <li><a href="Info Resources/common-childhood-illnesses.html">Common Childhood
+                                            Illnesses</a></li>
                                 </ul>
                             </div>
 
@@ -82,16 +85,22 @@
                                 <h4>Mental Health & Everyday Issues</h4>
                                 <ul class="mega-menu-links">
                                     <li><a href="Info Resources/adhd.html">ADHD</a></li>
-                                    <li><a href="#">Depression & Anxiety</a></li>
-                                    <li><a href="#">Substance Abuse</a></li>
-                                    <li><a href="#">Sexually Transmitted Infections (STIs)</a></li>
-                                    <li><a href="#">Ulcers & Stomach Disorders</a></li>
-                                    <li><a href="#">Back Pain & Joint Problems</a></li>
-                                    <li><a href="#">Headaches & Migraines</a></li>
+                                    <li><a href="Info Resources/depression-anxiety.html">Depression & Anxiety</a></li>
+                                    <li><a href="Info Resources/substance-abuse.html">Substance Abuse</a></li>
+                                    <li><a href="Info Resources/sexually-transmitted-infections.html">Sexually
+                                            Transmitted Infections (STIs)</a></li>
+                                    <li><a href="Info Resources/ulcers-stomach-disorders.html">Ulcers & Stomach
+                                            Disorders</a></li>
+                                    <li><a href="Info Resources/back-pain-joint-problems.html">Back Pain & Joint
+                                            Problems</a></li>
+                                    <li><a href="Info Resources/headaches-migraines.html">Headaches & Migraines</a></li>
                                 </ul>
                             </div>
                         </div>
                     </div>
+                </li>
+                <li class="nav-item">
+                    <a href="Symptom_Checker.html" class="nav-link">Symptom Checker</a>
                 </li>
                 <li class="nav-item">
                     <a href="Drugs_supl.html" class="nav-link has-dropdown">Drugs & Supplements<span
@@ -123,29 +132,25 @@
                             <div class="mega-menu-section initial-items">
                                 <h4>Life Stages</h4>
                                 <ul class="mega-menu-links">
-                                    <li><a href="#">Baby</a></li>
-                                    <li><a href="#">Children's Health</a></li>
-                                    <li><a href="#">Teen Health</a></li>
-                                    <li><a href="#">Men's Health</a></li>
-                                    <li><a href="#">Women's Health</a></li>
+                                    <li><a href="wellness.html">Baby</a></li>
+                                    <li><a href="wellness.html">Children's Health</a></li>
+                                    <li><a href="wellness.html">Teen Health</a></li>
+                                    <li><a href="wellness.html">Men's Health</a></li>
+                                    <li><a href="wellness.html">Women's Health</a></li>
                                 </ul>
                             </div>
                             <div class="mega-menu-section initial-items">
                                 <h4>Relationships</h4>
                                 <ul class="mega-menu-links">
-                                    <li><a href="#">Birth Control</a></li>
-                                    <li><a href="#">Parenting</a></li>
-                                    <li><a href="#">Pregnancy</a></li>
-                                    <li><a href="#">Sex & Relationships</a></li>
-                                    <li><a href="#">Healthy Beauty</a></li>
+                                    <li><a href="Info Resources/birth-control.html">Birth Control</a></li>
+                                    <li><a href="Info Resources/parenting.html">Parenting</a></li>
+                                    <li><a href="Info Resources/pregnancy.html">Pregnancy</a></li>
                                 </ul>
                             </div>
                         </div>
                     </div>
                 </li>
-                <li class="nav-item">
-                    <a href="Symptom_Checker.html" class="nav-link">Symptom Checker</a>
-                </li>
+
                 <li class="nav-item">
                     <a href="Doctor.html" class="nav-link">Find a Doctor</a>
                 </li>
@@ -155,7 +160,7 @@
                         <span class="arrow"></span>
                     </a>
                     <div class="dropdown">
-                        <a href="#" class="dropdown-item">News</a>
+                        <a href="https://www.medicalnewstoday.com/" class="dropdown-item">News</a>
                         <a href="#" class="dropdown-item">Blogs</a>
                         <a href="#" class="dropdown-item">Newsletters</a>
                         <a href="#" class="dropdown-item">Surveys</a>
@@ -545,7 +550,7 @@
             async function handleLogout() {
                 try {
                     await supabase.auth.signOut();
-                    window.location.href = 'auth.html';
+                    window.location.href = 'index.html';
                 } catch (error) {
                     console.error('Logout error:', error);
                 }
@@ -575,23 +580,6 @@
 
             // Make updateUI available in global scope for other scripts
             window.updateUI = updateUI;
-        });
-    </script>
-    <script>
-        const logoutBtn = document.getElementById("logoutBtn");
-
-        logoutBtn.addEventListener("click", async () => {
-            try {
-                // Sign out from Supabase
-                const { error } = await supabaseClient.auth.signOut();
-                if (error) throw error;
-
-                // Redirect to homepage after logout
-                window.location.href = "index.html";
-            } catch (err) {
-                console.error("Logout failed:", err.message);
-                alert("Error logging out, please try again.");
-            }
         });
     </script>
 
