feat(admin): implement admin panel with authentication and management features
- Add admin dashboard with overview and navigation
- Implement login page with client-side authentication
- Create doctors management interface
- Add patients management with CRUD operations
- Include responsive design and data tables for better UX

--- a/admin/index.html
+++ b/admin/index.html
@@ -392,31 +392,31 @@
 
             <li class="menu-title">Management</li>
             <li class="menu-item">
-                <a href="admin/doctors.html" class="menu-link">
+                <a href="doctors.html" class="menu-link">
                     <i class="fas fa-user-md"></i>
                     <span>Doctors</span>
                 </a>
             </li>
             <li class="menu-item">
-                <a href="admin/patients.html" class="menu-link">
+                <a href="patients.html" class="menu-link">
                     <i class="fas fa-user-injured"></i>
                     <span>Patients</span>
                 </a>
             </li>
             <li class="menu-item">
-                <a href="admin/appointments.html" class="menu-link">
+                <a href="appointments.html" class="menu-link">
                     <i class="fas fa-calendar-check"></i>
                     <span>Appointments</span>
                 </a>
             </li>
             <li class="menu-item">
-                <a href="admin/medications.html" class="menu-link">
+                <a href="medications.html" class="menu-link">
                     <i class="fas fa-pills"></i>
                     <span>Medications</span>
                 </a>
             </li>
             <li class="menu-item">
-                <a href="admin/health-resources.html" class="menu-link">
+                <a hrefhealth-resources.html" class="menu-link">
                     <i class="fas fa-file-medical"></i>
                     <span>Health Resources</span>
                 </a>
