feat: add admin panel functionality and documentation
- Added comprehensive admin panel with user management
- Implemented settings page with system configuration
- Updated README with admin panel documentation
- Added admin panel screenshot

--- a/admin/index.html
+++ b/admin/index.html
@@ -416,7 +416,7 @@
                 </a>
             </li>
             <li class="menu-item">
-                <a hrefhealth-resources.html" class="menu-link">
+                <a href="health-resources.html" class="menu-link">
                     <i class="fas fa-file-medical"></i>
                     <span>Health Resources</span>
                 </a>
@@ -424,19 +424,19 @@
 
             <li class="menu-title">System</li>
             <li class="menu-item">
-                <a href="#" class="menu-link">
+                <a href="users.html" class="menu-link">
                     <i class="fas fa-users-cog"></i>
                     <span>Users</span>
                 </a>
             </li>
             <li class="menu-item">
-                <a href="#" class="menu-link">
+                <a href="settings.html" class="menu-link">
                     <i class="fas fa-cog"></i>
                     <span>Settings</span>
                 </a>
             </li>
             <li class="menu-item">
-                <a href="#" class="menu-link">
+                <a href="login.html" class="menu-link">
                     <i class="fas fa-sign-out-alt"></i>
                     <span>Logout</span>
                 </a>
